--- a/app/assets/sass/_base.scss
+++ b/app/assets/sass/_base.scss
@@ -1,4 +1,4 @@
 /*
- * import compass css reset
+ * import normalize css
  */
-@import "compass/reset"
+@import "../vendor/normalize-scss/_normalize.scss"
