--- a/app/assets/sass/screen.scss
+++ b/app/assets/sass/screen.scss
@@ -1,11 +1,10 @@
 @import "base";
 
 body {
-    font-size: 1.5em;
-    color: #bbb;
+    background-color: #ccc;
 }
 
 #header {
-    margin: 20px auto;
+    margin: 10px auto;
     text-align: center;
 }
