--- a/app/assets/sass/screen.scss
+++ b/app/assets/sass/screen.scss
@@ -8,3 +8,18 @@ body {
     margin: 10px auto;
     text-align: center;
 }
+
+h2 {
+    color: #555;
+}
+
+/* ==========================================================================
+Browse Happy prompt
+========================================================================== */
+
+.browsehappy {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
