add chrome logo.
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/app/assets/sass/screen.scss
+++ b/app/assets/sass/screen.scss
@@ -9,6 +9,14 @@ body {
     text-align: center;
 }
 
+#logo {
+    img {
+        max-width: 200px;
+    }
+    margin: 0 auto;
+    text-align: center;
+}
+
 h2 {
     color: #555;
 }
