--- a/app/assets/sass/screen.scss
+++ b/app/assets/sass/screen.scss
@@ -1,24 +1,32 @@
 @import "base";
 
 body {
-    background-color: #ccc;
+  background-color: #ccc;
 }
 
 #header {
-    margin: 10px auto;
-    text-align: center;
+  margin: 10px auto;
+  text-align: center;
 }
 
 #logo {
-    img {
-        max-width: 200px;
-    }
-    margin: 0 auto;
-    text-align: center;
+  img {
+    max-width: 200px;
+  }
+  margin: 0 auto;
+  text-align: center;
 }
 
 h2 {
-    color: #555;
+  color: #555;
+}
+
+.github {
+  position:
+  absolute;
+  top: 0;
+  left: 0;
+  border: 0;
 }
 
 /* ==========================================================================
@@ -26,8 +34,8 @@ Browse Happy prompt
 ========================================================================== */
 
 .browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
